# simple_traj_airsim

./: CMakeLists.txt  package.xml
include/simple_traj_airsim/: keyboard_operator.h
launch/: airsim_costmap2d.launch  airsim_local_goal_key_dual.launch  airsim_local_goal_keyboard.launch  airsim_local_goal_pub_dual.launch  airsim_local_goal_pub_quad.launch  airsim_local_pub_single.launch  frames.gv
launch/detector_test/: detector_test.launch  frames.gv
launch/occupancy2d/: costmap_2d.launch
launch/rviz/: temp.rviz  temp_detector.rviz
src/: keyboard_operator.cpp  main.cpp
srv/: KeyboardInput.srv
